# client-server_app

./: .gitignore  CMakeLists.txt  README.md
src/: settings.h
src/client/: connection.cpp  connection.h  encrypt.h  login.cpp  login.h  main.cpp
src/server/: connection.cpp  connection.h  data.cpp  data.h  main.cpp  threading.cpp  threading.h  window.cpp  window.h  windows.h
